# libml

./: CMakeLists.txt  README.md  configure.sh
cmake/: BuildType.cmake  BundleStaticLibrary.cmake  CompilerFlags.cmake  FindCppUTest.cmake  InstallPath.cmake  Libraries.cmake  Macros.cmake
cmake/farmhash/: CMakeLists.txt
cmake/fft2d/: CMakeLists.txt
cmake/gemmlowp/: CMakeLists.txt
cmake/ml_dtypes/: CMakeLists.txt
examples/: CMakeLists.txt
examples/classifier/: CMakeLists.txt  classifier.cc  train.py
src/: CMakeLists.txt  libml.cc  libml.h  libml.pc.in  libml_static.pc.in  metadata_schema.fbs  metadata_schema_generated.h  util.cc  util.h  version.h.in
src/test/: CMakeLists.txt  binary_classifier_test.cc  test.model
src/test/models/: 1024.model  256.model  512.model  lowercase.model
